[package]
name = "bitvavo-api"
description = "A client for the bitvavo API"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = "0.11"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1", features = ["serde"] }

zeroize = "1"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
auth-tests = []
